Prevent long sanskrit words from flowing out of the box in search results. Closes #27

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -547,6 +547,11 @@ a {
     td {
         border: 0;
     }
+    td.text {
+        word-break: break-all;
+        word-wrap: break-word;
+        white-space: pre-wrap;
+    }
     .reference {
         border-top: 1px solid #ddd;
         .number, .headings {
